--- a/css/index.css
+++ b/css/index.css
@@ -72,10 +72,12 @@ section {
     place-content: center;
 }
 
-#wrapper div:hover {
-    background-color: rgba(255, 255, 255, 0.605);
-    border-style: solid;
-    border-color: black;
+
+.wrapper-div-active {
+    background-color: rgb(255, 255, 255);
+    border: 8px solid black;
+    border-radius: 15px;
+
 }
 
 a {
