--- a/css/game.css
+++ b/css/game.css
@@ -13,7 +13,8 @@ main {
 }
 
 .cells {
-    background-color: rgb(255, 255, 255);
+    background: -webkit-linear-gradient(to top, #ffffff67, #ffffff);
+    background: linear-gradient(to top, #ffffff67, #ffffff);
     border-radius: 6px;
     cursor: pointer;
     resize: none;
@@ -25,7 +26,7 @@ main {
 }
 
 .cells:hover {
-    box-shadow: -1px -1px 15px rgb(0, 0, 0) inset;
+    box-shadow: -1px -1px 15px rgba(0, 0, 0) inset;
     transform: scale(0.99);
     cursor: pointer;
 }
