--- a/css/game.css
+++ b/css/game.css
@@ -32,6 +32,9 @@ main {
 }
 
 #reset {
+    color:orange;
+    text-shadow: 2px 2px 4px black; /* Add black shadow */
+    background-color: rgb(236, 226, 226);
     z-index: 100;
     border-radius: 50px;
     width: 110px;
@@ -40,6 +43,14 @@ main {
     box-shadow: 0px -1px 15px rgba(0, 0, 0, 0.726) inset;
     font-size: 14px;
     font-weight: bold;
+}
+#heading {
+    color: red;
+    text-shadow: 2px 2px 4px black; /* Add black shadow */
+    font-size: 24px; /* Adjust the font size as needed */
+    font-weight: bold; /* Make the text bold */
+    text-align: center; /* Center the text */
+    margin-top: 20px; /* Add some margin at the top */
 }
 
 #reset:hover {
