--- a/css/index.css
+++ b/css/index.css
@@ -18,10 +18,18 @@ main {
         width: 80vw;
     }
 }
-
+#heading {
+    color: red;
+    text-shadow: 2px 2px 4px black; /* Add black shadow */
+    font-size: 24px; /* Adjust the font size as needed */
+    font-weight: bold; /* Make the text bold */
+    text-align: center; /* Center the text */
+    margin-top: 20px; /* Add some margin at the top */
+}
 p {
     text-align: center;
-    color: white;
+    color: red;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add text shadow */
     font-size: 14px;
 }
 
@@ -36,6 +44,8 @@ p:last-child {
 }
 
 #heading {
+    color: red;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add text shadow */
     font-size: 30px;
     margin-bottom: 3vh;
     text-shadow: 1px 2px 1px rgb(0, 0, 0);
@@ -88,6 +98,9 @@ a {
 
 button,
 a {
+    background: linear-gradient(to right, blue, green);
+    color: white;
+    text-shadow: 2px 2px 4px black; /* Add black shadow */
     width: 100%;
     height: 9vh;
     border-radius: 8px;
